updated db logic - now works with postgreSQL